# calculator

./: .gitignore  Cargo.toml  README.md  build.rs
console_app/: Cargo.toml
console_app/src/: calculator_interface.rs  main.rs
desktop_app/: Cargo.toml  tauri.conf.json
desktop_app/src/: main.rs
gui_app/: Cargo.toml  calculator.css  calculator_temp.html  index.html
gui_app/content/: style.css
gui_app/src/: calculator_interface.rs  main.rs  yew_app.rs
lib/: Cargo.toml
lib/src/: calculator.rs  lib.rs
lib/src/calculator/: calculator_err.rs
lib/src/calculator/calculator_interpreter/: interpreter.rs  tests.rs
lib/src/calculator/calculator_parser/: expression.rs  parser.rs
src/: calculator_interpreter.rs  calculator_parser.rs  handle_args.rs  lib.rs  main.rs
src/calculator_interface/: console.rs  gui.rs  mod.rs  ui_trait.rs
src/calculator_interface/gui/: components.rs
src/calculator_interface/gui/components/: buttons.rs  helloworld.slint  window.rs
src/calculator_interpreter/: tests.rs
src/calculator_logic/: calculator.rs  calculator_interpreter.rs  calculator_parser.rs  mod.rs
src/calculator_logic/calculator_interpreter/: interpreter.rs  tests.rs
src/calculator_logic/calculator_parser/: parser.rs  terminal.rs  tests.rs
src/calculator_parser/: expression.rs  parser.rs  terminal.rs  tests.rs
src/calculator_parser/parser/: parsererr.rs
src/calculator_parser/terminal/: terminals.rs
tauri_app/: Cargo.toml  tauri.conf.json
wasm_app/: Cargo.toml  index.html
wasm_app/content/: style.css
wasm_app/src/: calculator_interface.rs  main.rs
(+13 files in other folders)
