[package]
name = "calculator"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
unicode-segmentation = "1.9.0"
lazy_static = "1.4.0"
rand = "0.8.4"
colored = "2.0.0"
kas = "0.12.1"
env_logger = "0.10.0"