[package]
name = "gui"
version = "0.4.0"
edition = "2021"

[dependencies]
calculator = { version = "0.4.0", path = "../lib"}
yew = { version = "0.20.0", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }
log = { version = "0.4.6" }
wasm-logger = { version = "0.2.0" }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3.60" }